--- a/cloud2021/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud2021/cloud-provider-payment8001/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/db2021?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 123456
+    password: 1234qwer
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
