--- a/cloud2021/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud2021/cloud-consumer-order80/src/main/resources/application.yml
@@ -1,3 +1,14 @@
 server:
   port: 80
 
+spring:
+  application:
+    name: order-server
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+
