--- a/cloud2021/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud2021/cloud-eureka-server7001/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eurekapojer
   #    hostname: eureka7001.com
   client:
-    register-with-eureka: false
+    register-with-eureka: true
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:7002/eureka/
