--- a/cloud2021/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud2021/cloud-provider-payment8002/src/main/resources/application.yml
@@ -19,4 +19,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+      defaultZone: http://eurekapojer:7001/eureka,http://eurekapojer:7002/eureka
+  instance:
+    instance-id: payment8002
+    perfer-ip-address: true
