--- a/cloud2021/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud2021/cloud-eureka-server7002/src/main/resources/application.yml
@@ -3,10 +3,10 @@ server:
 
 eureka:
   instance:
-    hostname: eurekapojer
+    hostname: localhost
   #    hostname: eureka7002.com
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
     service-url:
       defaultZone: http://${eureka.instance.hostname}:7001/eureka/
