--- a/cloud2021/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud2021/cloud-consumer-order80/src/main/resources/application.yml
@@ -10,5 +10,6 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
+      defaultZone: http://localhost:7001/eureka
+#      ,http://localhost:7002/eureka
 
