--- a/cloud2021/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud2021/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -6,3 +6,10 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: http://localhost:7001/eureka
+
+#设置feign客户端超时时间（openfeign默认支持ribbon）
+ribbon:
+  #建立连接所用的时间，适用于网络状态正常的情况下，两端连接所用的时间
+  ReadTimeout: 5000
+  #建立连接后从服务端读取到可用资源所用的时间
+  ConnectTimeout: 5000
