--- a/cloud2021/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud2021/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -5,13 +5,18 @@ spring:
     name: cloud-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true #开启从注册中心动态创建路由的功能，利用微服务名进行路由
       routes:
         - id: payment_routh   #路由的ID
-          uri: http://localhost:8001
+#          uri: http://localhost:8001
+          uri: lb://cloud-payment-service #匹配后提供的服务的路由地址
           predicates:
             - Path=/payment/get/**
         - id: payment_routh2
-          uri: http://localhost:8001
+#          uri: http://localhost:8001
+          uri: lb://cloud-payment-service
           predicates:
             - Path=/payment/lb/**
 eureka:
