--- a/cloud2021/.gitignore
+++ b/cloud2021/.gitignore
@@ -1,6 +1,37 @@
-#忽略所有target目录
+.metadata
+bin/
+tmp/
+logs/
 target/
-#忽略所有.idea目录
 .idea/
-#忽略所有.iml文件
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings
+.loadpath
+.recommenders
+.classpath
+.project
+.class
+.idea
 *.iml
+.externalToolBuilders/
+*.launch
+.cproject
+.autotools
+.factorypath
+.buildpath
+.target
+.tern-project
+.texlipse
+.springBeans
+.recommenders/
+.apt_generated/
+.cache-main
+.scala_dependencies
+.worksheet
+.idea/
+/.vscode/launch.json
+**/order-service/export/**
